[gd_scene load_steps=15 format=3 uid="uid://dcxgxf8qeioqg"]

[ext_resource type="Script" uid="uid://cgkcac86c4hyl" path="res://Scripts/UI/UIManager.gd" id="1_48q88"]
[ext_resource type="Texture2D" uid="uid://crxc2yfd2f45d" path="res://Sprites/tools/fire_axe.png" id="2_gamh4"]
[ext_resource type="PackedScene" uid="uid://fyjad1d56ayn" path="res://Scenes/UI/death_screen.tscn" id="3_b83rk"]
[ext_resource type="Texture2D" uid="uid://blq1lp1b8qpqe" path="res://Sprites/tools/fire_extinguisher.png" id="3_w7hmr"]
[ext_resource type="PackedScene" path="res://Scenes/UI/win_screen.tscn" id="4_7tgkj"]
[ext_resource type="Texture2D" uid="uid://cuqq04lr52exr" path="res://Sprites/tools/wet_cloth.png" id="4_r46t8"]
[ext_resource type="Texture2D" uid="uid://d1f7f317j83ke" path="res://Sprites/heart/heart_full.png" id="5_hull5"]
[ext_resource type="Texture2D" uid="uid://cn4fyphy44mfg" path="res://Sprites/pause_button.png" id="7_xjg7p"]
[ext_resource type="PackedScene" uid="uid://bgutt3f8tkjn6" path="res://Scenes/scene_tracker.tscn" id="9_8wlyu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mg6lk"]
atlas = ExtResource("7_xjg7p")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wunin"]
atlas = ExtResource("7_xjg7p")
region = Rect2(50, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_j04uc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg6lk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wunin")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ImageTexture" id="ImageTexture_xjg7p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mg6lk"]
bg_color = Color(0.912684, 0.437149, 0.355842, 1)

[node name="Main UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48q88")

[node name="ToolContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 256.0
offset_top = 40.0
offset_right = 472.0
offset_bottom = 120.0
theme_override_constants/separation = -21

[node name="FireAxeImage" type="TextureRect" parent="ToolContainer"]
layout_mode = 2
texture = ExtResource("2_gamh4")
expand_mode = 3
stretch_mode = 5

[node name="FireExtinguisherImage" type="TextureRect" parent="ToolContainer"]
layout_mode = 2
texture = ExtResource("3_w7hmr")
expand_mode = 3

[node name="WetClothImage" type="TextureRect" parent="ToolContainer"]
layout_mode = 2
texture = ExtResource("4_r46t8")
expand_mode = 3

[node name="HealthContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 64.0
offset_top = 48.0
offset_right = 256.0
offset_bottom = 104.0
scale = Vector2(1.12, 1.12)

[node name="TextureRect" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("5_hull5")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("5_hull5")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="HealthContainer"]
layout_mode = 2
texture = ExtResource("5_hull5")
expand_mode = 3

[node name="DeathScreen" parent="." instance=ExtResource("3_b83rk")]
layout_mode = 1

[node name="WinScreen" parent="." instance=ExtResource("4_7tgkj")]
layout_mode = 1

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -83.0
offset_top = 51.0
offset_right = -44.0
offset_bottom = 82.0
grow_horizontal = 0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pause"]
position = Vector2(19, 16)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_j04uc")

[node name="RollTimerSlider" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -153.0
offset_top = 182.0
offset_right = 167.0
offset_bottom = 222.0
grow_horizontal = 2

[node name="HSlider" type="HSlider" parent="RollTimerSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber_disabled = SubResource("ImageTexture_xjg7p")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_mg6lk")
value = 50.0
editable = false
scrollable = false

[node name="SceneTracker" parent="." instance=ExtResource("9_8wlyu")]
